--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "test-app": {
+    "dashboardNeptuno": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/test-app",
+            "outputPath": "dist/dashboardNeptuno",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -64,12 +64,16 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "host": "192.168.1.154",
+            "port": 4200
+          },
           "configurations": {
             "production": {
-              "browserTarget": "test-app:build:production"
+              "browserTarget": "dashboardNeptuno:build:production"
             },
             "development": {
-              "browserTarget": "test-app:build:development"
+              "browserTarget": "dashboardNeptuno:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "test-app:build"
+            "browserTarget": "dashboardNeptuno:build"
           }
         },
         "test": {
