--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-app",
+  "name": "dashboardNeptuno",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@influxdata/influxdb-client": "^1.33.2",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "highcharts": "^11.1.0",
