--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.2",
+    "@angular/material-date-fns-adapter": "^17.3.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@influxdata/influxdb-client": "^1.33.2",
     "chart.js": "^4.4.0",
+    "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
     "highcharts": "^11.1.0",
     "highcharts-angular": "^3.1.2",
