--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highcharts": "^11.1.0",
     "highcharts-angular": "^3.1.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
